[gd_scene load_steps=9 format=2]

[ext_resource path="res://Components/Ship/Ship.gd" type="Script" id=1]
[ext_resource path="res://Components/Ship/sprite.png" type="Texture" id=2]
[ext_resource path="res://Assets/flaunch.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/explosion01.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/light.png" type="Texture" id=5]
[ext_resource path="res://Assets/circle.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource_name = "Explode"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.25, 1, 1 ),
"update": 0,
"values": [ 0.01, 2.0, 0.01 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosion:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Explosion:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.4819

[node name="Ship" type="KinematicBody2D"]

position = Vector2( 1000, 130 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "collision" ]
velocity = Vector2( -40, 0 )
recoil_force = 2
controlled = 0

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 0.412048, 0.904129 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( 11.9318, -8.47392, -11.4966, -0.00721741, 11.2359, 12.2869 )

[node name="FireSfx" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ExplosionSfx" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Explode = SubResource( 1 )
blend_times = [  ]

[node name="Light2D" type="Light2D" parent="." index="5"]

enabled = true
editor_only = false
texture = ExtResource( 5 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.01
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range" ]

[node name="Explosion" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 4.37982, 0.875961 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Shield" type="Area2D" parent="." index="7" groups=[
"Shield",
]]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="Shield" index="0"]

modulate = Color( 1, 1, 1, 0.442 )
position = Vector2( 3.57489, 0 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield" index="1"]

position = Vector2( 3.17767, 0 )
shape = SubResource( 2 )

[connection signal="finished" from="ExplosionSfx" to="." method="_on_ExplosionSfx_finished"]


